--- a/src/Osynapsy/assets/Ocl/ListSortable/style.css
+++ b/src/Osynapsy/assets/Ocl/ListSortable/style.css
@@ -1,24 +1,18 @@
 /**
  * Listview
  */
-body.dragging, body.dragging * {
-  cursor: move !important;
+
+
+
+
+.sortable-dragging {
+    border: 1px solid red !important;
+    opacity: 0.9;
 }
 
-.dragged {
-  position: absolute;
-  opacity: 0.5;
-  z-index: 2000;
-}
-
-.osy-listsortable li.placeholder {
-  position: relative;
-  /** More li styles **/
-}
-
-.osy-listsortable li.placeholder:before {
-  position: absolute;
-  /** Define arrowhead **/
+.sortable-placeholder {
+    border: 1px dashed #CCC;    
+    min-height: 50px;
 }
 
 .osy-listsortable {
