Adjusted css oh head element

--- a/src/Osynapsy/assets/Ocl/ListSortable/style.css
+++ b/src/Osynapsy/assets/Ocl/ListSortable/style.css
@@ -16,6 +16,10 @@
     display: table;
     width: 100%;
 }
+.ocl-listsortable-head {
+    margin-bottom: 12px;
+    margin-left: -14px;
+}
 .osy-listsortable div.row {
     display: table-row;
 }
