--- a/src/Osynapsy/assets/Ocl/DataGrid/style.css
+++ b/src/Osynapsy/assets/Ocl/DataGrid/style.css
@@ -1,3 +1,8 @@
+div.treegrid td {
+    border: 0px !important;
+    padding: 0px !important;
+}
+
 .osy-datagrid-2 table.border-on{
     border-bottom: 1px solid #f8f8f8;
 }
@@ -7,7 +12,7 @@
 }
 .osy-datagrid-2 table.border-on th,
 .osy-datagrid-2 table.border-on td {
-    padding: 2px 3px !important;
+    padding: 2px 3px;
 }
 .osy-datagrid-2 input[type="text"] {
     padding: 1px 2px !important;
