Added padding from row

--- a/src/Osynapsy/assets/Bcl/Addressbook/style.css
+++ b/src/Osynapsy/assets/Bcl/Addressbook/style.css
@@ -103,3 +103,7 @@ div.osy-addressbook  div.p1-row {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+div.osy-addressbook div.row {
+    padding-bottom: 25px;
+}
