--- a/src/Osynapsy/assets/Bcl/Addressbook/style.css
+++ b/src/Osynapsy/assets/Bcl/Addressbook/style.css
@@ -77,6 +77,7 @@ div.osy-addressbook .osy-addressbook-item div.p1 {
 }
 div.osy-addressbook .osy-addressbook-item {
     color: #888;
+    margin-bottom: 25px;
 }
 div.osy-addressbook .osy-addressbook-item div.p1 {
     padding-left: 35px;
@@ -102,8 +103,4 @@ div.osy-addressbook  div.p1-row {
     width: 95%;
     overflow: hidden;
     text-overflow: ellipsis;
-}
-
-div.osy-addressbook div.row {
-    padding-bottom: 25px;
 }
