improve visualization of p2 div

--- a/src/Osynapsy/assets/Bcl/Addressbook/style.css
+++ b/src/Osynapsy/assets/Bcl/Addressbook/style.css
@@ -117,6 +117,9 @@ div.osy-addressbook .osy-addressbook-item div.p2 {
     position: absolute;
     bottom: 0px;
     width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 div.osy-addressbook  div.p1-row {
