--- a/src/Osynapsy/assets/Bcl/Addressbook/style.css
+++ b/src/Osynapsy/assets/Bcl/Addressbook/style.css
@@ -27,24 +27,30 @@ div.osy-addressbook div.osy-addressbook-head {
     margin-top: 20px;
     margin-bottom: 10px;
 }
+
 div.osy-addressbook div.osy-addressbook-head h3 {
     float: left
 }
+
 div.osy-addressbook div.osy-addressbook-head h1 {
     text-align: center;
 }
+
 div.addressbook div.addressbook-head h1 {
     text-align: center;
     font-weight: normal;
 }
+
 div.osy-addressbook div.osy-addressbook-head div.add {
     float: right;
     padding: 5px;
     margin: 7px 30px 0px 0px;
 }
+
 div.osy-addressbook div.osy-addressbook-body {
     overflow: auto; cursor: default;
 }
+
 div.osy-addressbook .osy-addressbook-item {
     position: relative;
     display: block;
@@ -63,16 +69,32 @@ div.osy-addressbook .osy-addressbook-item {
 div.osy-addressbook .osy-addressbook-item:hover {
     color: #337ab7;
     border-color : #337ab7;
-    box-shadow-color: 0 1px 3px #337ab7;
+    cursor: default;
 }
+
 div.osy-addressbook .osy-addressbook-item:hover div.p2 {
-    border-color: #337ab7;
-    background-color: #337ab7; 
-    color: #eee !important;
+    border-color: #337ab7; 
 }
-div.osy-addressbook .osy-addressbook-item:hover .osy-addressbook-img {
-    border-color: #337ab7;
+
+div.osy-addressbook .osy-addressbook-item-selected div.p2 {
+    border-color: black !important; 
 }
+
+div.osy-addressbook .osy-addressbook-item a.osy-addressbook-link {
+    display: none; 
+    position: absolute;
+    padding: 3px 5px;
+    background-color: white;
+    bottom: 5px;
+    right: 7px;
+    border-radius: 3px;
+    text-decoration: none;    
+}
+
+div.osy-addressbook .osy-addressbook-item:hover a.osy-addressbook-link {
+    display: block;
+}
+
 div.osy-addressbook div.p0 .osy-addressbook-img {
     width: 33px;
     height: 33px;
@@ -80,19 +102,8 @@ div.osy-addressbook div.p0 .osy-addressbook-img {
     top: 12px;
     left: 7px;
     border-radius: 3px;
-    border: 1px solid silver;
 }
 
-div.osy-addressbook div.osy-addressbook-body div.contact {
-    background-image: url(/img/ico/contact.png); 
-    background-repeat: no-repeat; 
-    background-position: 5px 5px;
-}
-div.osy-addressbook div.osy-addressbook-body div.distribution-list {
-    background-image: url(/img/ico/list.bullet.png);
-    background-repeat: no-repeat;
-    background-position: 5px 5px;
-}
 div.osy-addressbook .osy-addressbook-item div.p1 {
     height:79px
 }
@@ -127,4 +138,24 @@ div.osy-addressbook  div.p1-row {
     width: 95%;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+div.osy-addressbook input.osy-addressbook-checkbox
+{
+    visibility: hidden; position: absolute; top: 0px; left:0px
+}
+
+div.osy-addressbook .osy-addressbook-item-selected {
+    border-color: black !important;
+    color: black !important;
+}
+
+div.osy-addressbook div.osy-addressbook-item span.fa-check {
+    display: none;
+    position: absolute;
+    top: 3px;
+    right: 3px;
+}
+div.osy-addressbook div.osy-addressbook-item-selected span.fa-check {
+    display: block;
 }
