--- a/src/Osynapsy/assets/Ocl/DataGrid/style.css
+++ b/src/Osynapsy/assets/Ocl/DataGrid/style.css
@@ -8,11 +8,12 @@ div.treegrid td {
 }
 .osy-datagrid-2 table.border-on th {
     text-align: center;
-    border: 0px;
+    border-top: 1px solid #ddd !important;
+    border-bottom: 0px;
+    padding: 3px;
 }
-.osy-datagrid-2 table.border-on th,
 .osy-datagrid-2 table.border-on td {
-    padding: 2px 3px;
+    padding: 5px !important;
 }
 .osy-datagrid-2 input[type="text"] {
     padding: 1px 2px !important;
