--- a/assets/Ocl/MapTomtomBox/style.css
+++ b/assets/Ocl/MapTomtomBox/style.css
@@ -14,7 +14,9 @@ and open the template in the editor.
     width: 35px;
     height: 46px;
     font-weight: bold;
-    color: white;        
+    color: white; 
+    margin-top: -46px;
+    margin-left: -18px;
 }
 
 .osy-mapgrid-marker-red {
