Fix url of tree icon

--- a/assets/Ocl/DataGrid/style.css
+++ b/assets/Ocl/DataGrid/style.css
@@ -95,17 +95,17 @@ div.osy-datagrid-2 span.tree {
 }
 
 div.osy-datagrid-2 span.tree-plus-1 {
-    background-image: url(/__assets/osynapsy/Ocl/DataGrid/tree.set.png);
+    background-image: url(tree.set.png);
     background-position: 0 6px;
 }
 
 div.osy-datagrid-2 span.tree-plus-2 {
-    background-image: url(/__assets/osynapsy/Ocl/DataGrid/tree.set.png);
+    background-image: url(tree.set.png);
     background-position: 0 -23px;
 }
 
 div.osy-datagrid-2 span.tree-plus-3 {
-    background-image: url(/__assets/osynapsy/Ocl/DataGrid/tree.set.png);
+    background-image: url(tree.set.png);
     background-position: 0 -48px;
 }
 
@@ -121,21 +121,21 @@ div.osy-datagrid-2 span.minus {
 }
 
 div.osy-datagrid-2 span.tree-con-1 {
-    background-image: url(/__assets/osynapsy/Ocl/DataGrid/tree.set.png);
+    background-image: url(tree.set.png);
     background-position: 0 -73px;
 }
 
 div.osy-datagrid-2 span.tree-con-2 {
-    background-image: url(/__assets/osynapsy/Ocl/DataGrid/tree.set.png);
+    background-image: url(tree.set.png);
     background-position: 0 -73px;
 }
 
 div.osy-datagrid-2 span.tree-con-3 {
-    background-image: url(/__assets/osynapsy/Ocl/DataGrid/tree.set.png);
+    background-image: url(tree.set.png);
     background-position: 0 -98px;
 }
 
 div.osy-datagrid-2 span.tree-con-4 {
-    background-image: url(/__assets/osynapsy/Ocl/DataGrid/tree.set.png);
+    background-image: url(tree.set.png);
     background-position: 0 -124px;
 }
