change zindex of dropdown-menu class

--- a/assets/Lib/bootstrap-select-1.10.0/bootstrap-select.css
+++ b/assets/Lib/bootstrap-select-1.10.0/bootstrap-select.css
@@ -103,7 +103,7 @@ select.selectpicker {
   position: absolute;
 }
 .bootstrap-select.btn-group.bs-container .dropdown-menu {
-  z-index: 1060;
+  z-index: 1060 !important;
 }
 .bootstrap-select.btn-group .dropdown-toggle .filter-option {
   display: inline-block;
