Improve dummy image visualization

--- a/assets/Bcl/ImageBox/style.css
+++ b/assets/Bcl/ImageBox/style.css
@@ -35,3 +35,7 @@
 .osy-imagebox-bcl:hover .osy-imagebox-bcl-image-delete {
     visibility: visible;
 }
+
+.osy-imagebox-dummy > img{
+    max-width: 100%;
+}
