--- a/assets/Ocl/TreeBox/style.css
+++ b/assets/Ocl/TreeBox/style.css
@@ -61,7 +61,11 @@ div.osy-treebox span.tree-con-4 {
     background-image: url(tree.set.png);
     background-position: 0 -124px;
 }
-div.osy-treebox-node-label:hover,
-div.osy-treebox-leaf:hover{
-    background-color: #eee;
+div.osy-treebox-node-label:hover .osy-treebox-label,
+div.osy-treebox-leaf:hover .osy-treebox-label{
+    color: #0078A8;
+}
+span.osy-treebox-label-selected {
+    color: #0078A8;
+    font-weight: bold;
 }
