--- a/assets/Lib/rcrop/style.css
+++ b/assets/Lib/rcrop/style.css
@@ -90,7 +90,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      border: 1px solid white;
+      border: 1px solid gray;
       -moz-box-sizing: border-box;
       -webkit-box-sizing: border-box;
       box-sizing: border-box; }
@@ -132,15 +132,15 @@
       height: 33%;
       top: 33%;
       left: 0;
-      border-top: 1px dashed #fff;
-      border-bottom: 1px dashed #fff; }
+      border-top: 1px dashed gray;
+      border-bottom: 1px dashed gray; }
     .rcrop-wrapper .rcrop-grid-line:nth-child(2) {
       height: 100%;
       width: 33%;
       left: 33%;
       top: 0;
-      border-left: 1px dashed #fff;
-      border-right: 1px dashed #fff; }
+      border-left: 1px dashed gray;
+      border-right: 1px dashed gray; }
   .rcrop-wrapper .rcrop-handler-wrapper {
     position: absolute;
     top: 0;
