--- a/assets/Bcl/DataGrid/style.css
+++ b/assets/Bcl/DataGrid/style.css
@@ -5,9 +5,7 @@
     margin-left: 0px !important;
     margin-right: 0px !important;
 }
-.bcl-datagrid .bcl-datagrid-th {
-    position: relative;
-}
+
 .bcl-datagrid .bcl-datagrid-th,
 .bcl-datagrid .bcl-datagrid-head {
     font-weight: bold;
@@ -29,8 +27,9 @@
 .bcl-datagrid-thead > .bcl-datagrid-th {
     padding-top: 5px;
     padding-bottom: 5px;
-    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
     background-color: #fdfdfd;
+    position: relative;
 }
 .bcl-datagrid-thead > .bcl-datagrid-th:first-child {
     border-left: 1px solid transparent;
@@ -38,12 +37,15 @@
 .bcl-datagrid-border-on .bcl-datagrid-body .row:first-child {
     border-top: 1px solid #ddd;
 }
+
+.bcl-datagrid-border-on .bcl-datagrid-td {
+    border-right: 1px solid #eee;
+}
+
 .bcl-datagrid-body .bcl-datagrid-body-row:hover {
     background-color: #f8f8f8;
 }
-.bcl-datagrid-body .row {    
-    padding-top: 5px;
-    padding-bottom: 5px;
+.bcl-datagrid-body .row {
     position: relative;
 }
 
@@ -61,8 +63,9 @@
 .bcl-datagrid-body .cmd-row {
     display: none;
     position: absolute;
-    top: 5px;
+    top: 0px;
     right: 5px;
+    border: none !important;
 } 
 
 .bcl-datagrid-body div.bcl-datagrid-body-row:hover .cmd-row
@@ -80,6 +83,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     font-size: 0.9em;
+    padding: 5px 15px;
 }
 
 .bcl-datagrid-th-order-label {
