--- a/assets/Bcl4/Accordion/style.css
+++ b/assets/Bcl4/Accordion/style.css
@@ -11,3 +11,13 @@ and open the template in the editor.
 .c-pointer {
     cursor: pointer;
 }
+
+.card-header .panel-commands {
+    visibility: hidden;
+}
+.card-header .panel-commands a {
+    text-decoration: none;
+}
+.card:hover .card-header .panel-commands {
+    visibility: visible;
+}
