added class font-weight-500

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,3 +191,5 @@ div#waitMask > div.message > div.progress {
 .osy-pb-10 {padding-bottom: 10px;}
 .osy-pb-20 {padding-bottom: 20px;}
 .osy-pb-30 {padding-bottom: 30px;}
+
+.font-weight-500 {font-weight: 500;}
